affinitic/skin/static/style.css
@font-face {
    font-family: 'UbuntuTitle';
    src: url('./font/ubuntu-title-webfont.eot');
    src: url('./font/ubuntu-title-webfont.eot?#iefix') format('embedded-opentype'),
         url('./font/ubuntu-title-webfont.woff') format('woff'),
         url('./font/ubuntu-title-webfont.ttf') format('truetype'),
         url('./font/ubuntu-title-webfont.svg#Ubuntu-TitleTitle') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'NobileRegular';
    src: url('./font/nobile-webfont.eot');
    src: url('./font/nobile-webfont.eot?#iefix') format('embedded-opentype'),
         url('./font/nobile-webfont.woff') format('woff'),
         url('./font/nobile-webfont.ttf') format('truetype'),
         url('./font/nobile-webfont.svg#NobileRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}


.break-float{
clear:both;
}

.float-left{
float:left;
}

.float-right{
float:right;
}


body{
margin:0;
background-color:#333333;
color:#999;
font-family:sans-serif;
}

#wrapper{
}

#wrapper-site{
width:1000px;
height:718px;
border-radius:30px;
margin:auto;
margin-top:10%;
}

/*** MENU SUP ***/
#menu-sup{
border-bottom:1px solid #ddd;
background-color:transparent;
width:955px;
}

#menu-sup li{
}

nav#menu-sup li:first-child,
nav#menu-sup li:first-child a{
border-radius:5px 0px 0px 0px;
}

nav#menu-sup li:last-child,
nav#menu-sup li:last-child a{
border-radius:0px 5px 0px 0px;
}

nav#menu-sup li a{
display:inline-block;
height:33px;
background-color:#fff;
line-height:33px;
padding:0px 17px;
text-align:center;
border-left:1px solid #d7dada;
border-right:1px solid #d7dada;
font-family:arial;
font-size:13px;
color:#ccc;
transition: background-color 0.4s ease-in-out 0s;
}

nav#menu-sup li a:hover{
color:#929292;
}

/*** BREADCRUMBS ***/
#breadcrumbs-you-are-here{
display:none;
}

/*** CONTENU PRINCIPAL ***/
#content{
margin: 0px;
}

#content-main{
border-radius:0px 30px 0px 30px;
background-color:rgba(255,255,255,1);
box-shadow: 10px 10px 15px rgba(253, 247, 221, 0.5),
            -10px 0px 15px rgba(253, 247, 221, 0.5);
border-radius:0px 30px 30px 30px;
}


/*** LOGO ***/
#logo-societe{
border-bottom:1px dotted #aaa;
width:615px;
margin-bottom:5px;
height:163px;
}

#logo{
width:150px;
height:150px;
background-image:url(images/affinitic_logo.png);
background-repeat:no-repeat;
margin-left:10px;
margin-top:8px;
float:left;
}


/*** NOM SOCIETE ***/
#societe{
float:right;
width:320px;
height:139px;
margin-right:10px;
margin-top:0px;
text-align:right;
color: #7E725B;
font-family: "NobileRegular";
font-size: 72px;
font-weight: bold;
letter-spacing: -8px;
line-height:165px;
opacity: 1;
text-shadow:1px 1px 3px rgba(100, 100, 100, 0.7);
}


/*** CONTENT-TEXT ***/
#content-text{
float:left;
width:585px;
height:475px;
overflow:auto;
margin-left:5px;
padding:0px 12px;
}


/*** CONTENT-IMAGE-RIGHT ***/
#content-right-image{
width:370px;
margin-top:-170px;
float:right;
min-height:685px;
background-image:url(images/right_image.png);
background-repeat:no-repeat;
border-radius:0px 30px 30px 0px;
}

#content p{
font-size: 1em;
line-height: 1.5em;
}

#content h1.documentFirstHeading {
font:30px "NobileRegular";
margin-top: 0;
color:#7e725b;
letter-spacing: 0em;
margin-bottom: 20px;
}

#content h2{
font-size:1.2em;
color:#333;
letter-spacing:0em;
}

#content .documentDescription, #content #description {
color:#7E725B;
font-family:'NobileRegular';
font-size:18px;
line-height:1.5;
margin-bottom: 20px;
}

#content a:link, dl.portlet a:link {
border-bottom: 0.1em solid #CCCCCC;
color:rgb(138,156,188);
}


#content a:hover, dl.portlet a:hover {
color:#855934 !important;  /*#205C90 !important;*/
}


/*** FOOTER ***/
#portal-footer{
background-color:transparent;
}

#footer-theme{
position:relative;
top:-32px;
z-index:10;
width:610px;
padding-left:20px;
padding-top:4px;
border-top:1px dotted #ccc;
height:26px;
background-color:#fff;
border-radius:0px 0px 0px 30px;
}


/*** ZONE SOCIAL NETWORK ***/
#social-network{
height:24px;
width:200px;
margin-top:-40px;
}

#facebook a{
float:left;
display:inline-block;
width:30px;
height:24px;
background-image:url(images/icon_fb.png);
background-repeat:no-repeat;
background-position:left top;
}

#facebook a:hover{
background-position:left -26px;
}

#tweeter a{
float:left;
display:inline-block;
width:30px;
height:24px;
background-image:url(images/icon_tweeter.png);
background-repeat:no-repeat;
background-position:left top;
}

#tweeter a:hover{
background-position:left -26px;
}

#google-plus a{
float:left;
display:inline-block;
width:30px;
height:24px;
background-image:url(images/icon_google_plus.png);
background-repeat:no-repeat;
background-position:left top;
}

#google-plus a:hover{
background-position:left -26px;
}

#blog-affinitic a{
float:left;
display:inline-block;
width:30px;
height:24px;
background-image:url(images/icon_blog.png);
background-repeat:no-repeat;
background-position:left top;
}

#blog-affinitic a:hover{
background-position:left -26px;
}



#coordonnee{
float:right;
margin-top:0px;
margin-right:4px;
width:450px;
font-size:0.6em;
color:#999;
text-align:right;
}


/*** ZAF BOYZ ***/
article.zaf-boyz-listing{
border:1px solid #ccc;
border-radius: 8px;
box-shadow:5px 5px 10px rgba(50,50,50,0.5);
padding:8px;
margin-bottom:10px;
}

section.zaf-boyz-short-description{
float:left;
width:400px;
}

section.zaf-boyz-vignette{
float:right;
width:60px;
margin-right:90px;
}

.brun-titre,
article#zaf-boyz-description h1,
article#zaf-boyz-description h3{
color:#7E725B;
margin-top:8px;
}


/*** CLIENTS ***/
article.client-listing{
float:left;
width:210px;
margin:25px;
border:1px solid rgb(138,156,188);
border-radius:10px;
padding:8px;
box-shadow:3px 3px 6px rgba(50,50,50,0.4);
}

section.fleche-plus{
position: relative;
top:6px;
left:190px;
width:10px;
}

article#client-description{}

article#client-description h1,
article#client-description h3{
color:#7E725B;
margin-top:8px;
}

section#client-image-site-description{
width:402px;
margin:auto;
}

section#client-site-description{
width:400px;
margin:auto;
margin-top:15px;
}

div.client-url{
width:300px;
}

div.client-date{
width:98px;
text-align:right;
padding-right:1px;
}



div#back-button {
float: left;
width: 30px;
height: 20px;
border: 1px solid #dedede;
border-radius:30px;
font-size: 1.5em;
font-weight: bold;
margin: 0 0 10px 8px;
padding:6px 0px 4px 0px;
background: rgb(255,255,255); /* Old browsers */
background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(241,241,241,1) 50%, rgba(225,225,225,1) 51%, rgba(246,246,246,1) 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(50%,rgba(241,241,241,1)), color-stop(51%,rgba(225,225,225,1)), color-stop(100%,rgba(246,246,246,1))); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(241,241,241,1) 50%,rgba(225,225,225,1) 51%,rgba(246,246,246,1) 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(241,241,241,1) 50%,rgba(225,225,225,1) 51%,rgba(246,246,246,1) 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(241,241,241,1) 50%,rgba(225,225,225,1) 51%,rgba(246,246,246,1) 100%); /* IE10+ */
background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(241,241,241,1) 50%,rgba(225,225,225,1) 51%,rgba(246,246,246,1) 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 ); /* IE6-9 */
}


div#back-button a{
border-bottom:0px !important;
color:#aaa !important;
}


div#back-button a:after {
/*content: " ➜";*/
content:"\2190";
}





/***  SUPERSIZED ***/
#supersized{
display:block;
height:100%;
left:0;
overflow:hidden;
position:fixed;
top:0;
width:100%;
z-index:-999;
}
#supersized-loader{
position:absolute;
top:50%;
left:50%;
z-index:0;
width:60px;
height:60px;
margin:-30px 0 0 -30px;
text-indent:-999em;
background:url(../img/progress.gif) no-repeat center center;
}

#supersized img{
width:auto;
height:auto;
position:relative;
display:none;
outline:none;
border:none;
}
#supersized.speed img { -ms-interpolation-mode:nearest-neighbor; image-rendering: -moz-crisp-edges; }	/*Speed*/
#supersized.quality img { -ms-interpolation-mode:bicubic; image-rendering: optimizeQuality; }			/*Quality*/

#supersized li{
display:block;
list-style:none;
z-index:-30;
position:fixed;
overflow:hidden;
top:0;
left:0;
width:100%;
height:100%;
background:#111;
}
#supersized a { width:100%; height:100%; display:block; }
#supersized li.prevslide { z-index:-20; }
#supersized li.activeslide { z-index:-10; }
#supersized li.image-loading { background:#111 url(../img/progress.gif) no-repeat center center; width:100%; height:100%; }
#supersized li.image-loading img{ visibility:hidden; }
#supersized li.prevslide img, #supersized li.activeslide img{ display:inline; }

